# bluefox2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
calib/: calib_25000494.yml  calib_25000495.yml  calib_25000855.yml  calib_25001110.yml  calib_25001185.yml  calib_29900130.yml  calib_29900189.yml  calib_30000313.yml  calib_30000334.yml  calib_30000336.yml  calib_30000337.yml
cfg/: Bluefox2Dyn.cfg  CameraDyn.cfg
cmake/: FindmvIMPACT.cmake  Findmvimpact.cmake
include/: camera_base
include/bluefox2/: bluefox2.h  bluefox2_ros.h  bluefox2_setting.h  camera.h  camera_node.h  camera_setting.h  multi_node.h  mvimpact_helper.h  ros_camera.h  single.h  single_camera.h  single_node.h  stereo.h  stereo_camera.h  stereo_node.h  stereo_sync.h
install/: install.bash
launch/: calib.launch  multi_node.launch  node.launch  single_node.launch  single_nodelet.launch  stereo_node.launch  stereo_nodelet.launch  stereo_sync_node.launch  trinocular.launch
mvIMPACT/: 51-mvbluefox.rules  README
mvIMPACT/include/DriverBase/Include/: mvCustomCommandDataTypes.h  mvDriverBaseEnums.h  mvVersionInfo.h
mvIMPACT/include/common/: auto_array_ptr.h
mvIMPACT/include/common/crt/: mvstring.h
mvIMPACT/include/mvDeviceManager/Include/: mvDeviceManager.h
mvIMPACT/include/mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  mvIMPACT_acquire_GenICam_CustomCommands.h  mvIMPACT_acquire_GenICam_FileStream.h  versionInfo.txt
mvIMPACT/include/mvPropHandling/Include/: mvPropHandlingDatatypes.h
mvIMPACT/lib/aarch64/: libmvBlueFOX.so.2.27.0  libmvDeviceManager.so.2  libmvDeviceManager.so.2.27.0  libmvPropHandling.so.2  libmvPropHandling.so.2.27.0  libmvVirtualDevice.so.2.27.0  libusb-1.0.so.0.0.0
mvIMPACT/lib/armv7l/: libmvBlueFOX.so.2  libmvBlueFOX.so.2.13.7  libmvBlueFOX.so.2.27.0  libmvBlueFOX.so.2.6.3  libmvDeviceManager.so.2  libmvDeviceManager.so.2.13.7  libmvDeviceManager.so.2.27.0  libmvPropHandling.so.2  libmvPropHandling.so.2.13.7  libmvPropHandling.so.2.27.0  libmvVirtualDevice.so.2  libmvVirtualDevice.so.2.13.7  libmvVirtualDevice.so.2.27.0  libusb-1.0.so.0.0.0
mvIMPACT/lib/x86_64/: libmvDeviceManager.so.2.10.0  libmvDeviceManager.so.2.13.7  libmvDeviceManager.so.2.27.0  libmvPropHandling.so.2.10.0  libmvPropHandling.so.2.13.7  libmvPropHandling.so.2.27.0  libusb-1.0.so.0.0.0
mvIMPACT/script/: 51-mvbf.rules
script/: 51-mvbf.rules  README
src/: CMakeLists.txt  bluefox2.cpp  bluefox2_node.cpp  bluefox2_ros.cpp  bluefox2_setting.cpp  camera.cpp  camera_node.cpp  camera_setting.cpp  list_cameras.cpp  list_mvdevice.cpp  mvimpact_helper.cpp  ros_camera.cpp  single.cpp  single_camera.cpp  single_node.cpp  single_nodelet.cpp  stereo.cpp  stereo_camera.cpp  stereo_node.cpp
src/multi/: multi_main.cpp  multi_node.cpp
src/single/: single_camera.cpp  single_main.cpp  single_node.cpp  single_nodelet.cpp
src/stereo/: stereo_camera.cpp  stereo_main.cpp  stereo_node.cpp  stereo_nodelet.cpp  stereo_sync.cpp  stereo_sync_node.cpp
srv/: SetExposeSrv.srv
