<?xml version="1.0"?>
<package>
  <name>bluefox2</name>
  <version>0.0.0</version>
  <description>The bluefox2 package</description>
  <maintainer email="quchao@seas.upenn.edu">chao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_filter</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_filter</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
