<?xml version="1.0"?>
<package format='2'>
  <name>bluefox2</name>
  <version>0.2.0</version>
  <description>The bluefox2 package</description>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>camera_base</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
